# RMTC-Simulation

./: .gitignore  README.md  params.yaml
src/controller/: package.xml  setup.py
src/controller/controller/: controller.py
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: Control.msg
src/sim_node/: package.xml  setup.py
src/sim_node/sim_node/: bullets.py  lidar.py  robot.py  sim_node.py  simulation.py  utils.py
src/sim_node/sim_node/models/arena/: arena.urdf
src/sim_node/sim_node/models/bullet/: bullet.urdf
src/sim_node/sim_node/models/bullet/assets/: part_1.stl
src/sim_node/sim_node/models/hero/: hero-blue.urdf  hero-red.urdf
src/sim_node/sim_node/models/hero/meshes/: base_link.STL  lightbars_link.STL  mount_link.STL  numbers_link.STL  plates_link.STL  turret_link.STL
src/sim_node/sim_node/models/infantry/: infantry-blue.urdf  infantry-red.urdf
src/sim_node/sim_node/models/sentry/: sentry-blue.urdf  sentry-red.urdf
src/sim_node/sim_node/models/sentry/meshes/: base_link.STL  lightbars_link.STL  mount_link.STL  numbers_link.STL  plates_link.STL  turret_link.STL
