<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_node</name>
  <version>0.0.0</version>
  <description>pybullet simulator of controllable robots</description>
  <maintainer email="kal036@ucsd.edu">kane-li</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>messages</depend>
  <depend>python3-pybullet-pip</depend>
  <depend>python3-numpy</depend>
  <depend>cv_bridge</depend> 
  <depend>sensor_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
